[project]
name = "relock"
version = "0.7.8"
description = "Relock high-frequency key rotation server / python SDK"
authors = [
  { name="Relock Inc.", email="hello@relock.id" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/relockid/python"
repository = "https://github.com/relockid/python"
docker = "https://hub.docker.com/r/relockid/server"

[build-system]
requires = ["requests>=2.31", "cryptography>=42.0.5", "setuptools"]
build-backend = "setuptools.build_meta"